# ros_ati_mini45

./: CMakeLists.txt  README.md  package.xml
launch/: main.launch
msg/: ForceMeasurement.msg  ZeroingDuration.msg
src/: ros_ati_mini45_node.py
src/scripts/: preprocessing.py
